# this_file: pyproject.toml
# this_project: twat_search
#==============================================================================
# TWAT-SEARCH PACKAGE CONFIGURATION
# This pyproject.toml defines the package metadata, dependencies, build system,
# and development environment for the twat-search package, which provides web
# search capabilities as a plugin for the twat framework.
#==============================================================================

#------------------------------------------------------------------------------
# PROJECT METADATA
# Core package information used by PyPI and package managers.
#------------------------------------------------------------------------------
[project]
name = 'twat-search' # Package name on PyPI
description = 'Web search plugin for twat' # Short description
readme = 'README.md' # Path to README file
requires-python = '>=3.10' # Minimum Python version
keywords = [
    'web',
    'search',
    'plugin',
    'twat',
    'web-search',
    'search-engine',
    'api',
    'web-api',
    'web-scraping',
    'web-scraper',
    'web-scraper-api',
    'web-scraper-api-client',
] # Keywords for PyPI search
dynamic = ["version"] # Fields set dynamically at build time

# PyPI classifiers for package categorization
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

# Runtime dependencies with comments explaining their purpose
dependencies = [
    # Base twat framework
    'twat>=2.7.0', # Core framework for plugin system
    'twat-cache[all]>=2.6.7', # Caching utilities for search results
    
    # Data validation and settings
    'pydantic>=2.10.6', # Data validation using type annotations
    'pydantic-settings>=2.8.1', # Settings management with environment variables
    
    # HTTP clients
    'httpx>=0.28.1', # Modern async HTTP client
    'requests>=2.32.3', # Traditional HTTP client
    
    # CLI and display tools
    'fire>=0.7.0', # Automatic CLI generation
    'rich>=13.9.4', # Rich text and formatting in terminal
    
    # Environment configuration
    'python-dotenv>=1.0.1', # Load environment variables from .env files
    
    # HTML parsing
    'beautifulsoup4>=4.13.0', # HTML parser for web scraping
]

# Author information
[[project.authors]]
name = 'Adam Twardoch'
email = 'adam+github@twardoch.com'

# Project URLs
[project.urls]
Documentation = 'https://github.com/twardoch/twat-search#readme'
Issues = 'https://github.com/twardoch/twat-search/issues'
Source = 'https://github.com/twardoch/twat-search'

# Entry point for the twat plugin system
# This allows twat to discover and load the search plugin
[project.entry-points."twat.plugins"]
search = 'twat_search'

#------------------------------------------------------------------------------
# OPTIONAL DEPENDENCIES
# Additional dependencies for optional features, development, and testing.
#------------------------------------------------------------------------------
[project.optional-dependencies]
# Testing tools and frameworks
test = [
    'pytest>=8.3.5', # Testing framework
    'pytest-cov>=6.0.0', # Coverage plugin for pytest
    'pytest-xdist>=3.6.1', # Parallel test execution
    'pytest-benchmark[histogram]>=5.1.0', # Benchmarking plugin
    'pytest-asyncio>=0.25.3', # Async test support
    'coverage[toml]>=7.6.12', # Test coverage measurement
]

# Development tools
dev = [
    'pre-commit>=4.1.0', # Pre-commit hook manager
    'ruff>=0.9.9', # Linting and formatting
    'mypy>=1.15.0', # Type checking
    'absolufy-imports>=0.3.1', # Convert relative imports to absolute
    'pyupgrade>=3.19.1', # Upgrade Python syntax
    'isort>=6.0.1', # Sort imports
    'uv>=0.1.18', # Fast Python package installer and resolver
]

# Documentation tools
docs = [
    "sphinx>=8.3.0", # Documentation generator
    "sphinx-rtd-theme>=3.0.2", # Read the Docs theme
    "sphinx-autodoc-typehints>=3.1.0", # Type hints support in docs
    "myst-parser>=4.0.1", # Markdown support in Sphinx
]

# Optional search backends, organized by provider
brave = [] # Placeholder for Brave search integration
duckduckgo = [
    'duckduckgo-search>=7.5.0' # DuckDuckGo search integration
]
bing_scraper = [
    'scrape-bing>=0.1.2.1' # Bing search scraping
]
tavily = [
    'tavily-python>=0.5.1' # Tavily search API
]
pplx = [] # Placeholder for Perplexity search
serpapi = [
    'serpapi>=0.1.5' # SerpAPI integration
]
hasdata = [] # Placeholder for HasData integration
falla = [
    # Falla search integration
    "lxml>=5.3.1", # XML/HTML parsing library
    "playwright>=1.50.0", # Browser automation
]
google_scraper = [
    'googlesearch-python>=1.3.0' # Google search scraping
]

# All search backends combined
all = [
    'duckduckgo-search>=7.5.0',
    'googlesearch-python>=1.3.0',
    'lxml>=5.3.1',
    'playwright>=1.50.0',
    'scrape-bing>=0.1.2.1',
    'serpapi>=0.1.5',
    'tavily-python>=0.5.1',
]

#------------------------------------------------------------------------------
# COMMAND-LINE SCRIPTS
# Entry points for command-line executables installed with the package.
#------------------------------------------------------------------------------
[project.scripts]
# Top-level dispatcher
twat-search             = 'twat_search.__main__:main'
# Per-leaf dashed entries
twat-search-version     = 'twat_search.__main__:cmd_version'
twat-search-list-engines = 'twat_search.__main__:cmd_list_engines'
# Per-group dashed entries (web group)
twat-search-web         = 'twat_search.__main__:cmd_web'

#------------------------------------------------------------------------------
# BUILD SYSTEM CONFIGURATION
# Defines the tools required to build the package and the build backend.
# Uses Hatch (via hatchling) for simplified packaging workflow and hatch-vcs
# for automatic versioning from git tags.
#------------------------------------------------------------------------------
[build-system]
# Hatchling is a modern build backend for Python packaging
# hatch-vcs integrates with version control systems for versioning
requires = [
    'hatchling>=1.27.0', # Modern build backend
    'hatch-vcs>=0.4.0', # Version control system integration
]
build-backend = 'hatchling.build' # Specifies Hatchling as the build backend

#------------------------------------------------------------------------------
# HATCH BUILD CONFIGURATION
# Configures the build process, specifying which packages to include and
# how to handle versioning.
#------------------------------------------------------------------------------
[tool.hatch.build]
exclude = ["**/__pycache__", "**/.pytest_cache", "**/.mypy_cache"]

[tool.hatch.build.targets.wheel]
packages = ['src/twat_search'] # Includes src/twat_search directory in the wheel
reproducible = true # Enables reproducible builds

# Version source configuration
[tool.hatch.version]
source = 'vcs'

[tool.hatch.version.raw-options]
version_scheme = "post-release"

# Version control system hook configuration
[tool.hatch.build.hooks.vcs]
version-file = 'src/twat_search/__version__.py'

# Metadata handling configuration
[tool.hatch.metadata]
allow-direct-references = true # Allow direct references in metadata (useful for local dependencies)

#------------------------------------------------------------------------------
# DEVELOPMENT ENVIRONMENTS
# Configures different environments for development, testing, and linting,
# each with specific dependencies and commands.
#------------------------------------------------------------------------------
[tool.hatch.env]

# Default development environment with basic tools
[tool.hatch.envs.default]
features = ['dev', 'test', 'all']

# Commands available in the default environment
[tool.hatch.envs.default.scripts]
# Run tests with optional arguments
test = 'pytest {args:tests}'
# Run tests with coverage reporting
test-cov = 'pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/twat_search --cov=tests {args:tests}'
# Run type checking
type-check = 'mypy src/twat_search tests'
# Run linting and formatting
lint = ['ruff check src/twat_search tests', 'ruff format src/twat_search tests']
# Format and fix style issues
fmt = [
    "ruff format --respect-gitignore src/twat_search tests",
    "ruff check --fix src/twat_search tests"
]
fix = [
    "ruff check --fix --unsafe-fixes src/twat_search tests",
    "ruff format --respect-gitignore src/twat_search tests"
]

# Matrix configuration to test across multiple Python versions
[[tool.hatch.envs.all.matrix]]
python = ['3.10', '3.11', '3.12'] # Test with Python 3.10, 3.11, and 3.12

#------------------------------------------------------------------------------
# SPECIALIZED ENVIRONMENTS
# Additional environments for specific development tasks.
#------------------------------------------------------------------------------
# Dedicated environment for linting and code quality checks
[tool.hatch.envs.lint]
detached = true # Create a separate, isolated environment
features = ['dev'] # Use dev extras dependencies

# Linting environment commands
[tool.hatch.envs.lint.scripts]
# Type checking with automatic type installation
typing = 'mypy --install-types --non-interactive {args:src/twat_search tests}'
# Check style and format code
style = ['ruff check {args:.}', 'ruff format {args:.}']
# Format and fix style issues
fmt = ['ruff format {args:.}', 'ruff check --fix {args:.}']
fix = [
    "ruff check --fix --unsafe-fixes {args:.}",
    "ruff format --respect-gitignore {args:.}"
]
# Run all ops
all = ["style", "typing", "fix"]

# Dedicated environment for testing
[tool.hatch.envs.test]
features = ['test'] # Use test extras as dependencies

# Testing environment commands
# Run tests in parallel
test = 'python -m pytest -n auto {args:tests}'
# Run tests with coverage in parallel
test-cov = 'python -m pytest -n auto --cov-report=term-missing --cov-config=pyproject.toml --cov=src/twat_search --cov=tests {args:tests}'
# Run benchmarks
bench = 'python -m pytest -v -p no:briefcase tests/test_benchmark.py --benchmark-only'
# Run benchmarks and save results
bench-save = 'python -m pytest -v -p no:briefcase tests/test_benchmark.py --benchmark-only --benchmark-json=benchmark/results.json'

# Documentation environment
[tool.hatch.envs.docs]
features = ['docs']

# Documentation environment commands
build = "sphinx-build -b html docs/source docs/build"

# GitHub Actions workflow configuration
[tool.hatch.envs.ci]
features = ['test']

[tool.hatch.envs.ci.scripts]
test = "pytest --cov=src/twat_search --cov-report=xml"

# Search backends environment
[tool.hatch.envs.search-backends]
features = [
    'duckduckgo',
    'bing_scraper',
    'tavily',
    'serpapi',
    'falla',
    'google_scraper'
]

#------------------------------------------------------------------------------
# CODE QUALITY TOOLS
# Configuration for linting, formatting, and code quality enforcement.
#------------------------------------------------------------------------------
#------------------------------------------------------------------------------
# COVERAGE CONFIGURATION
# Settings for test coverage measurement and reporting.
#------------------------------------------------------------------------------
# Path mapping for coverage in different environments
[tool.coverage.paths]
twat_search = ['src/twat_search', '*/twat-search/src/twat_search']
tests = ['tests', '*/twat-search/tests']

# Coverage report configuration
# Lines to exclude from coverage reporting
exclude_lines = [
    'no cov', # Custom marker to skip coverage
    'if __name__ == .__main__.:', # Script execution guard
    'if TYPE_CHECKING:', # Type checking imports and code
    'pass', # Empty pass statements
    'raise NotImplementedError', # Unimplemented method placeholders
    'raise ImportError', # Import error handling
    'except ImportError', # Import error handling
    'except KeyError', # Common error handling
    'except AttributeError', # Common error handling
    'except NotImplementedError', # Common error handling
]

[tool.coverage.run]
source_pkgs = ['twat_search', 'tests'] # Packages to measure coverage for
branch = true # Measure branch coverage (if/else statements)
parallel = true # Support parallel test execution
omit = ['src/twat_search/__about__.py'] # Files to exclude from coverage

#------------------------------------------------------------------------------
# MYPY CONFIGURATION
# Configuration for mypy, including type checking options and overrides.
#------------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10" # Match your requires-python
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

#------------------------------------------------------------------------------
# PYTEST CONFIGURATION
# Configuration for pytest, including markers, options, and benchmark settings.
#------------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-v --durations=10 -p no:briefcase"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
console_output_style = "progress"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
log_cli = true
log_cli_level = "INFO"
markers = [
    "benchmark: marks tests as benchmarks (select with '-m benchmark')",
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
    "slow: marks tests as slow (select with '-m slow')",
    "online: marks tests that require internet access",
    "requires_api_key: marks tests that require API keys",
]
norecursedirs = [
    ".*",
    "build",
    "dist",
    "venv",
    "__pycache__",
    "*.egg-info",
    "_private",
]
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.pytest-benchmark]
min_rounds = 100
min_time = 0.1
histogram = true
storage = "file"
save-data = true
compare = [
    "min", # Minimum time
    "max", # Maximum time
    "mean", # Mean time
    "stddev", # Standard deviation
    "median", # Median time
    "iqr", # Inter-quartile range
    "ops", # Operations per second
    "rounds", # Number of rounds
]

#------------------------------------------------------------------------------
# RUFF CONFIGURATION
# Configuration for Ruff, including linter and formatter settings.
#------------------------------------------------------------------------------
# Ruff linter and formatter configuration
[tool.ruff]
target-version = "py310" # Target Python version for syntax compatibility
line-length = 120 # Maximum line length

# Linting rules configuration
[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "ARG001",
    "ARG002",
    "ARG004",
    "ARG005",
    "B904",
    "C901",
    "DTZ005",
    "E501",
    "F401",
    "F811",
    "FBT001",
    "FBT002",
    "FBT003",
    "I001",
    "ISC001",
    "N803",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "S311",
    "S603",
    "S607",
    "T201",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

